docker-portal/midware.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: redirect-https
  namespace: nginx
spec:
  redirectScheme:
    scheme: https
    permanent: true
